2A/05_Projet_GL/src/test/deca/context/invalid/complet/56_new_class_nondef.deca
// Description :
//   new avec class non definie
// Resultats :
//    ligne 10 : identiﬁcateur de type non déclaré
// Historique :
//  cree le 16/01/2024


{
    new A();
}